Added input checking and errors
